flux 3